Will it let me do this?

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-/* @import url('https://fonts.googleapis.com/css?family=Acme|Vast+Shadow'); */
+@import url('https://fonts.googleapis.com/css?family=Acme|Vast+Shadow');
 h3 {
 	font-size: 35px !important;
-/* font-family: "Vast Shadow"; */
+	font-family: "Vast Shadow";
 }
 
 @media screen and (max-width: 767px) {
